// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`instance can be set to other instance and log properly 1`] = `
Array [
  Array [
    Object {
      "event": "USER-SIGNUP",
    },
  ],
  Array [
    Object {
      "event": "USER-SIGNUP",
      "result": "success",
    },
  ],
]
`;

exports[`instance can be set to other instance and log properly 2`] = `Array []`;

exports[`instance can be set to other instance and log properly 3`] = `
Array [
  Array [
    Object {
      "category": "CUSTOM_ERROR",
      "event": "USER-SIGNUP",
      "message": "user with the email already exists",
      "result": "failure",
    },
  ],
]
`;
